--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Vivendii
     <li>Clothes </li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Sign Up </li>
   </ul>
 </div>
 
